--- a/src/main/resources/archetype-resources/src/main/resources/application.yml
+++ b/src/main/resources/archetype-resources/src/main/resources/application.yml
@@ -17,7 +17,7 @@ camel:
   component:
     servlet:
       mapping:
-        context-path: /*
+        context-path: /api/*
   # rest can also be configured here instead in the CamelRouter class
   # rest DSL configuration
   rest:
