--- a/src/main/resources/archetype-resources/src/main/resources/openshift/spring-app-template-with-dev-pipeline.yaml
+++ b/src/main/resources/archetype-resources/src/main/resources/openshift/spring-app-template-with-dev-pipeline.yaml
@@ -206,11 +206,11 @@ parameters:
 - description: The name for the service.
   name: APPLICATION_NAME
   required: true
-  value: camelREST
+  value: ${artifactId}
 - description: The name for the application.
   name: APPLICATION
   required: true
-  value: camelREST
+  value: CamelREST
 - description: Active spring profile.
   name: SPRING_PROFILES
   required: true
